# yonep-nuts_AriakeKosen

./: .env.example  .gitattributes  .gitignore  LICENSE  README  README.md  check.bat  config.yml  count_char.py  get_ip.py  make_fig_func.py  pyproject.toml  set_config.py  visual.py
image_to_problem/: README.md  clear.py  main.cpp  make_problem.py  replace.py
image_to_problem/data/shikanoko_128-128/: problem.json
image_to_problem/data/shikanoko_32-32/: problem.json  visualizer.py
image_to_problem/data/shikanoko_64-64/: problem.json
manager/: README.md  answer_manager.py  set_config.py  visualize.py  visualizer.py
server_test/: description.md
server_test/__MACOSX/html/: ._preview.html
server_test/html/: init.js  preview.html
server_test/launch_server/: README.md  color.py  initial.json  launch_server.py  openapi.json  problem.py
solver/: Makefile  README.md  del.bat  headers.txt  include_finder.py  set_config.py
solver/benchmark/: _analyze.py  _marge.py  greedy_2mn_42.csv  simple_2mn_42.csv  simple_smart_42.csv
solver/include/: beam_node.hpp  board.hpp  board_template.hpp  common.hpp  communication.hpp  inherited_handlers.hpp  operation.hpp  point_xy.hpp  request_handler.hpp  solver.hpp  state.hpp  test.hpp
solver/lib/: dotenv.hpp  font.hpp  timer.hpp
solver/src/: beam_node.cpp  board.cpp  board_template.cpp  common.cpp  communication.cpp  inherited_handlers.cpp  main.cpp  operation.cpp  request_handler.cpp  solver.cpp  test.cpp
solver/test_data/: _analyze.py  _marge.py  greedy_2mn_42.json  simple_2mn_42.json  simple_smart_42.json
(+2 files in other folders)
